@@ -1,4 +1,12 @@
 <STRONG>Changes since 0.9.5</STRONG><BR><BR>
+Version <STRONG>0.9.5.0212</STRONG> includes the following changes:
+<UL>
+	<LI> Fixed a crash that happens when you toggle between the fullscreen and normal modes.</LI>
+	<LI> Fixed a "losing char space setting" bug (#1658074).</LI>
+	<LI> Adding @ as a valid URL character.</LI>
+	<LI> Enhanced numeric keypad behavior. Enter key on the keypad now works under application mode.</LI>
+</UL>
+
 Version <STRONG>0.9.5.0210</STRONG> includes the following changes:
 <UL>
 	<LI> Fixed a keypad mode problem. Cursor keys should behave better now.</LI>
